tests/snapshots/claptrap__tests__arg__action-append.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_flag=('value1' 'value2')
