tests/snapshots/claptrap__tests__arg__action-help.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_8d61f119'
[1m[4mUsage:[0m [1mprog[0m

[1m[4mOptions:[0m
      [1m--flag[0m  
  [1m-h[0m, [1m--help[0m  Print help
EOF_8d61f119
exit 0
