tests/snapshots/claptrap__tests__arg__default_value_if-present.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_flag='true'
claptrap_other='default'
