tests/snapshots/claptrap__tests__arg__groups.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
claptrap_verbose='true'
claptrap_debug='false'
