tests/snapshots/claptrap__tests__arg__hide.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_dd29d008'
[1m[4mUsage:[0m [1mprog[0m

[1m[4mOptions:[0m
  [1m-h[0m, [1m--help[0m  Print help
EOF_dd29d008
exit 0
