tests/snapshots/claptrap__tests__arg__hide_default_value.snap
---
source: src/tests.rs
expression: "super::run(spec, args)"
---
command cat <<'EOF_85c0eebe'
[1m[4mUsage:[0m [1mconnect[0m [OPTIONS]

[1m[4mOptions:[0m
      [1m--host[0m <host>  
  [1m-h[0m, [1m--help[0m         Print help
EOF_85c0eebe
exit 0
